[gd_scene load_steps=8 format=3 uid="uid://c7ncpcrcy21gq"]

[ext_resource type="Script" path="res://scripts/unitmovement.gd" id="1_i1bhx"]
[ext_resource type="Texture2D" uid="uid://wulir8ntdpfn" path="res://assets/kenney_platformer-art-extended-enemies/Alien sprites/alienGreen.png" id="2_hpo3w"]
[ext_resource type="Theme" uid="uid://cmqheujsf21rb" path="res://theme.tres" id="2_kle5p"]
[ext_resource type="Texture2D" uid="uid://bqu8dm2oocvgq" path="res://assets/kenney_platformer-art-extended-enemies/Alien sprites/alienGreen_walk1.png" id="3_8sxyi"]
[ext_resource type="Texture2D" uid="uid://hyi65scl88df" path="res://assets/kenney_platformer-art-extended-enemies/Alien sprites/alienGreen_walk2.png" id="4_ixhdb"]

[sub_resource type="SpriteFrames" id="SpriteFrames_5wnjs"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_hpo3w")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_8sxyi")
}, {
"duration": 1.0,
"texture": ExtResource("4_ixhdb")
}],
"loop": true,
"name": &"walk",
"speed": 6.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mj3h4"]
radius = 9.0
height = 32.0

[node name="Unit" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_i1bhx")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_kle5p")

[node name="HealthBar" type="ProgressBar" parent="HUD"]
layout_mode = 0
offset_left = -11.0
offset_top = -24.0
offset_right = 13.0
offset_bottom = -21.0
value = 41.52

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0.075, -0.149999)
scale = Vector2(0.391667, 0.391933)
sprite_frames = SubResource("SpriteFrames_5wnjs")
animation = &"walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_mj3h4")

[node name="DetectionArea2D" type="Area2D" parent="."]
position = Vector2(2.08165e-12, 2.08165e-12)
collision_layer = 0
collision_mask = 0
monitorable = false
metadata/_edit_group_ = true

[connection signal="body_entered" from="DetectionArea2D" to="." method="_on_detection_area_2d_body_entered"]
[connection signal="body_exited" from="DetectionArea2D" to="." method="_on_detection_area_2d_body_exited"]
